public/assets/css/styles.css
.margin-left-1em{
    margin-left: 1em;
}

.margin-left-2em{
    margin-left: 2em;
}

.margin-left-3em{
    margin-left: 3em;
}

.hvh-975{
    height: 97.5vh !important;
}

.hvh-80{
    height: 80vh !important;
}

.landing{
    min-height:97.5vh;
    background-image: url("https://w.wallhaven.cc/full/r7/wallhaven-r77g97.png");
    background-size: cover;
    background-color:black;
    padding: 0px !important;
    margin: 0px !important;
}

.landing-background{
    background-color: rgba(0, 0, 0, .4);
    min-height:97.5vh;
    min-width:100vh;
    width:100%;
    padding: 0px !important;
    margin: 0px !important;
}


.landing-content{
    padding-top:35vh;
    background-color: transparent;
    background-blend-mode: lighten;
    color:white;
    min-height:97.5vh;
    padding: 0px !important;
    margin: 0px !important;
}

.container-zeroed{
    min-height:97.5vh;
    padding: 0px !important;
    margin: 0px !important;
}

.container-zeroed-background{
    background-color: rgba(0, 0, 0, .4);
    min-height:97.5vh;
    min-width:100vh;
    width:100%;
    margin:0px !important;
    padding:0px !important;
}

.container-zeroed-content{
    margin:auto;
    background-color: transparent;
    background-blend-mode: lighten;
    color:white;
}


footer{
    width: 100%;
    height: 200px;
    background-color:#212529;
    color:#fff;
}

.btn-coa {
    color: #fff !important;
    background-color: #D37272 !important;
    border-color: #E25D5D !important;
    font-weight:bolder !important;
}

.btn-fw{
    width:200px;
}

